# tiempo2

./: .coveragerc  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  setup.py
.github/workflows/: python-app.yml
docs/: Atmosphere_8py.html  BindCPU_8py.html  BindUtils_8py.html  DrawGaussian_8h.html  DrawGaussian_8h_source.html  Instrument_8py.html  InterfaceCPU_8cpp.html  InterfaceCPU_8h.html  InterfaceCPU_8h_source.html  InterpUtils_8h.html  InterpUtils_8h_source.html  Observe_8h.html  Observe_8h_source.html  Random_8h.html  Random_8h_source.html  Scan_8h.html  Scan_8h_source.html  Sources_8py.html  Structs_8h.html  Structs_8h_source.html  Structs_8py.html  annotated.html  classRandom-members.html  classRandom.html  classes.html  classtiempo2_1_1Atmosphere_1_1Atmosphere-members.html  classtiempo2_1_1Atmosphere_1_1Atmosphere.html  classtiempo2_1_1Instrument_1_1Spectrometer.html  classtiempo2_1_1Interface_1_1Interface-members.html  classtiempo2_1_1Interface_1_1Interface.html  classtiempo2_1_1Sources_1_1MockSZ-members.html  classtiempo2_1_1Sources_1_1MockSZ.html  classtiempo2_1_1Structs_1_1Atmosphere.html  classtiempo2_1_1Structs_1_1Instrument.html  classtiempo2_1_1Structs_1_1Output.html  classtiempo2_1_1Structs_1_1SimParams.html  classtiempo2_1_1Structs_1_1Source.html  classtiempo2_1_1Structs_1_1Telescope.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7aadd542dbdc9d327285576860c8a00c.html  (+27 more)
docs/demos/: UseARIS.html
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_2.js  files_3.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_1.js  searchdata.js  (+12 more)
doxy/: Design.dox  Doxyfile  DoxygenLayout.xml  mainpage.dox
tests/: InputDicts.py  test_Atmosphere.py  test_BindCPU.py  test_Interface.py  test_Sources.py
(+43 files in other folders)
